objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BillToQuoteDate__c</fullName>
        <description>Most recent date this Contact was updated to show that they have a Bill-To quote to be emailed on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader.</description>
        <inlineHelpText>Date of the most recent quote sent to this contact.</inlineHelpText>
        <label>Current Bill-To Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BilltoQuoteEmailFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating that this Contact is to receive a Bill-To quote email on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader.</description>
        <label>Current Bill-To Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactCustShipTo__c</fullName>
        <description>This field mirrors the Account.CustomerShipTo__c field on the Account object. Used in ExactTarget and other processes.</description>
        <formula>if( AccountId = &quot;&quot;,&quot;&quot;,Account.CustomerShipTo__c)</formula>
        <inlineHelpText>6 digit Bill To number plus the 3 digit Ship To number.</inlineHelpText>
        <label>Customer Ship-To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCustomer__c</fullName>
        <description>Bill-To Account for which quotes are sent to this Contact</description>
        <formula>IF( EmailQuoteBillTo__c  = True, Account.CustomerNumber__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bill-To Account for which quotes are sent to this Contact</inlineHelpText>
        <label>Receives Bill-To Quotes for Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Used to indicate contact is no longer current, but we need to keep the contact around because they have call history.  When a contact is inactivated, the contact owner automatically changes to &quot;SFDC Admin&quot;. Call History is retained, but contact no longer syncs with Account Owner&apos;s Outlook.</description>
        <inlineHelpText>Change status to Inactive if Contact is no longer current.  This retains Call History but stops contact from syncing with Outlook.  When a contact is inactivated, the contact owner automatically changes to &quot;SFDC Admin&quot;.</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;
&amp;IF( LEN( FirstName ) = 0, &quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( LastName ) = 0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Title ) = 0, &quot;Title, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Phone ) = 0, &quot;Phone Number, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Email ) = 0, &quot;Email Address, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( MailingCity ) = 0, &quot;Mailing City, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( MailingState ) = 0, &quot;Mailing State, &quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( FirstName ) = 0, 0, 15 ) + 
IF( LEN( LastName ) = 0, 0, 15) + 
IF( LEN( Title ) = 0, 0, 10) + 
IF( LEN( Phone ) = 0, 0, 15) + 
IF( LEN( Email ) = 0, 0, 15) + 
IF( LEN( MailingCity ) = 0, 0, 15) + 
IF( LEN( MailingState ) = 0, 0, 15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demand_Driver__c</fullName>
        <label>Demand Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Reputation &amp; Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Portfolio Proficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketplace Command</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_Outcome__c</fullName>
        <label>Economic Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Cost/Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue/Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailQuoteBillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Contact receives Bill-To price quote emails for the parent (Bill-To) account.</description>
        <inlineHelpText>Check this box for contacts who should receive Price Quote emails for their parent Bill-To account.</inlineHelpText>
        <label>Email Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailQuoteShipTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Contact receives Ship-To price quote emails for the parent (Ship-To) account.
CURRENTLY NOT USED!!</description>
        <inlineHelpText>NOT USED, BUT NEEDED FOR DATASTAGE PROCESS TO WORK.</inlineHelpText>
        <label>Email Quote - Ship-To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailURL__c</fullName>
        <formula>HYPERLINK(&quot;http://pages.exacttarget.com/page.aspx?QS=38dfbe491fab00eac6d4c90f801056288eeb7a9c95c1ba4a69241cba504996ad&amp;sf=&quot; &amp; Id, &quot;View Emails Sent to this Contact on Your Behalf&quot;)</formula>
        <inlineHelpText>View HTML emails sent to this contact, including quotes, change notifications and promotional emails.</inlineHelpText>
        <label>Emails Sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FalseFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not ever under any circumstances set this to True. It must remain False in order for the weekly Quoting Update process to work.</description>
        <inlineHelpText>Never ever ever change the value of this field. It must stay &quot;False&quot;.</inlineHelpText>
        <label>False Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>Needed for various reports where not otherwise available.</description>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__ActivityTypeID__c</fullName>
        <label>ActivityTypeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InnovadexData1__InnovadexID__c</fullName>
        <label>InnovadexID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntegratedMailingCountry__c</fullName>
        <label>Integrated Mailing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedMailingState__c</fullName>
        <label>Integrated Mailing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedOtherCountry__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>Integrated Other Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedOtherState__c</fullName>
        <label>Integrated Other State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_PerNr__c</fullName>
        <description>PerNr of the Contact&apos;s Owner</description>
        <formula>Owner.PerNr__c</formula>
        <inlineHelpText>PerNr of the Contact&apos;s Owner</inlineHelpText>
        <label>Owner PerNr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToQuoteDate__c</fullName>
        <description>Most recent date this Contact was updated to show that they have a Ship-To quote to be emailed on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader. PLACEHOLDER - NOT CURRENTLY USED</description>
        <label>Current Ship-To Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipToQuoteEmailFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating that this Contact is to receive a Ship-To quote email on the next ExactTarget Send.  This field is determined in the weekly Quotes/Contact merge that happens on the Unix, and then updated via DataLoader.  PLACEHOLDER - NOT CURRENTLY USED.</description>
        <label>Current Ship-To Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Profile__c</fullName>
        <label>Stakeholder Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_of_Relationship__c</fullName>
        <label>State of Relationship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TEMPMailingStateLength__c</fullName>
        <description>temporary for data cleanup</description>
        <formula>LEN( MailingState)</formula>
        <label>TEMPMailingStateLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMPMailingStateShort__c</fullName>
        <description>temporary for data cleanup. DemandTools will set to the short version of the state. If blank, and state is not blank, this indicates an invalid state that needs to be cleaned up.</description>
        <label>TEMPMailingStateShort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMPOtherStateLength__c</fullName>
        <description>temp for data cleanup</description>
        <formula>LEN( OtherState)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEMPOtherStateLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMPOtherStateShort__c</fullName>
        <description>temporary for data cleanup. DemandTools will set to the short version of the state. If blank, and state is not blank, this indicates an invalid state that needs to be cleaned up.</description>
        <label>TEMPOtherStateShort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to last non-System Admin to modify this Contact. Modifiable by Apex only.</description>
        <label>User Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>Non-Admin user who last modified this record.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>